--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -247,13 +247,13 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 </footer>
 
 <link rel='stylesheet' id='jetpack-responsive-videos-style-css'  href='http://themedemos.webmandesign.eu/modern/wp-content/plugins/jetpack/modules/theme-tools/responsive-videos/responsive-videos.css' type='text/css' media='all' />
-<script type='text/javascript' src='/js/devicepx-jetpack.js'></script>
-<script type='text/javascript' src='/js/imagesloaded.pkgd.min.js'></script>
-<script type='text/javascript' src='/js/slick.min.js'></script>
-<script type='text/javascript' src='/js/scripts-navigation.js'></script>
-<script type='text/javascript' src='/js/scripts-global.js'></script>
-<script type='text/javascript' src='/js/skip-link-focus-fix.js'></script>
-<script type='text/javascript' src='/js/wp-embed.min.js'></script>
+<script type='text/javascript' src='js/devicepx-jetpack.js'></script>
+<script type='text/javascript' src='js/imagesloaded.pkgd.min.js'></script>
+<script type='text/javascript' src='js/slick.min.js'></script>
+<script type='text/javascript' src='js/scripts-navigation.js'></script>
+<script type='text/javascript' src='js/scripts-global.js'></script>
+<script type='text/javascript' src='js/skip-link-focus-fix.js'></script>
+<script type='text/javascript' src='js/wp-embed.min.js'></script>
 
 <script type='text/javascript' src='http://themedemos.webmandesign.eu/modern/wp-content/plugins/jetpack/modules/theme-tools/responsive-videos/responsive-videos.min.js'></script>
 <script type='text/javascript' src='http://stats.wp.com/e-201622.js' async defer></script>
