--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -248,13 +248,16 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 
 {% endfor %}
 
+<!--
 {% for tag in page.tags %}
 <p>Tags: <a href="/tags#{{ tag }}" class="tag">{{ tag }}</a></p>
-{% endfor %}
+<p>Tags: <a href="/tags#{{ tag }}" class="tag">{{ tag }}</a></p>
+{% endfor %}-->
 
 <div class="tags">
 Tags
-{% for tag in page.tags %} <div class='tag'><a href='/tag/#{{tag}}'>{{tag}}</a></div> {% endfor %}
+<!--{% for tag in page.tags %} <div class='tag'><a href='/tag/#{{tag}}'>{{tag}}</a></div> {% endfor %}-->
+{% for tag in page.tags %} <div class='tag'><a href="{{ "/tag/#{{tag}}" | prepend: site.baseurl >{{tag}}</a></div> {% endfor %}
 </div>
 
 		</main><!-- /#main -->
