--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,13 +11,13 @@
 
 <meta name='robots' content='noindex,follow' />
 <link rel='stylesheet' id='zilla-likes-css'  href='/css/zilla-likes.css' type='text/css' media='all' />
-<link rel='stylesheet' id='jetpack-top-posts-widget-css'  href='/css/top-posts-style.css' type='text/css' media='all' />
+<link rel='stylesheet' id='jetpack-top-posts-widget-css'  href="{{ "/css/top-posts-style.css" | prepend: site.baseurl }}">
 <link rel='stylesheet' id='wm-google-fonts-css'  href='//fonts.googleapis.com/css?family=Fira+Sans%3A400%2C300&#038;subset' type='text/css' media='all' />
-<link rel='stylesheet' href='/css/genericons.css' type='text/css' media='all' />
-<link rel='stylesheet' href='/css/slick.css' type='text/css' media='all' />
-<link rel='stylesheet' href='/css/starter.css' type='text/css' media='all' />
-<link rel='stylesheet' href='/css/style.css' type='text/css' media='all' />
-<link rel='stylesheet' href='/css/colors.css' type='text/css' media='all' />
+<link rel='stylesheet' href="{{ "/css/genericons.css" | prepend: site.baseurl }}">
+<link rel='stylesheet' href="{{ "/css/slick.css" | prepend: site.baseurl }}">
+<link rel='stylesheet' href="{{ "/css/starter.css" | prepend: site.baseurl }}">
+<link rel='stylesheet' href="{{ "/css/style.css" | prepend: site.baseurl }}">
+<link rel='stylesheet' href="{{ "/css/colors.css" | prepend: site.baseurl }}">
 <style id='wm-colors-inline-css' type='text/css'>
 
 .post-navigation .nav-previous { background-image: url('http://themedemos.webmandesign.eu/modern/wp-content/uploads/sites/8/2014/11/shore-house.jpg'); }
