--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -194,7 +194,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 
 			<figure class="post-thumbnail" itemprop="image">
 
-				<img src="{{ post.image | prepend: site.baseurl }}">
+				<img src="{{ page.image | prepend: site.baseurl }}">
 
 			</figure>
 
