--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -229,7 +229,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 
 			<figure class="post-thumbnail" itemprop="image">
 
-				<a href="{{ post.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ post.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ post.image }} 1200w, {{ post.image }} 420w, {{ post.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>
+				<a href="{{ page.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ page.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ page.image }} 1200w, {{ page.image }} 420w, {{ page.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>
 			</figure>
 
 		</div>
