--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -194,8 +194,9 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 
 			<figure class="post-thumbnail" itemprop="image">
 
-				<img src="{{ page.image | prepend: site.baseurl }}">
-
+				<!--<img src="{{ page.image | prepend: site.baseurl }}">-->
+				<!--<img src="{{ site.baseurl }}/{{ post.image | prepend: site.baseurl }}">-->
+				
 			</figure>
 
 		</div>
@@ -229,8 +230,10 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 
 			<figure class="post-thumbnail" itemprop="image">
 
-				<a href="{{ page.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ page.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ page.image }} 1200w, {{ page.image }} 420w, {{ page.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>
+				<!--<a href="{{ page.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ page.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ page.image }} 1200w, {{ page.image }} 420w, {{ page.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>-->
 			</figure>
+
+				<a href="{{ site.baseurl }}/{{ post.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ site.baseurl }}/{{ post.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ site.baseurl }}/{{ post.image }} 1200w, {{ site.baseurl }}/{{ post.image }} 420w, {{ site.baseurl }}/{{ post.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>
 
 		</div>
 
