--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -195,7 +195,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 			<figure class="post-thumbnail" itemprop="image">
 
 				<!--<img src="{{ page.image | prepend: site.baseurl }}">-->
-				<img src="{{ site.baseurl }}/{{ page.image}}">
+				<!--<img src="{{ site.baseurl }}/{{ page.image}}">-->
 				
 			</figure>
 
