--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,20 +131,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 <div id="page" class="hfeed site">
 	<div class="site-inner">
 
-<header id="masthead" class="site-header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
-
-<nav id="site-navigation" class="main-navigation" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement"><span class="screen-reader-text">Modern site navigation</span><a class="skip-link screen-reader-text" href="#content">Skip to content</a><div class="main-navigation-inner"><div class="menu"><ul><li id="menu-item-14" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-2 current_page_item menu-item-14 active-menu-item"><a href="{{ "/" | prepend: site.baseurl }}">Home</a></li>
-<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15"><a href="{{ "/gallery/" | prepend: site.baseurl }}">Gallery</a></li>
-<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15"><a href="{{ "/blog/" | prepend: site.baseurl }}">Blog</span></a></li>
-<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15"><a href="https://www.facebook.com/groups/1671389859766863" target="_blank">Facebook</span></a></li>
-<!--<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15"><a href="/admin" target="_blank">Admin</a></li>-->
-</ul></div>
-
-<!--<div id="nav-search-form" class="nav-search-form"><a href="#" id="search-toggle" class="search-toggle"><span class="screen-reader-text">Search</span></a>
-<form method="get" class="form-search" action="http://themedemos.webmandesign.eu/modern/">
-	<label for="search-field" class="screen-reader-text">Search</label>
-	<input type="search" value="" placeholder="Search field: type and press enter" name="s" class="search-field" id="search-field" />
-</form></div>-->
+  {% include nav-bar.html %}
 
 </div>
 
