--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -191,7 +191,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 
 
 
-{% for post in site.posts %}
+<!--{% for post in site.posts %}-->
 
 <article id="post-160" class="post-160 jetpack-portfolio type-jetpack-portfolio status-publish format-standard has-post-thumbnail hentry jetpack-portfolio-type-movies jetpack-portfolio-tag-films jetpack-portfolio-tag-movies-2" itemscope itemprop="workExample" itemtype="http://schema.org/CreativeWork">
 
@@ -219,7 +219,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 </div></div></div>
 </article><nav class="navigation post-navigation" role="navigation"><h1 class="screen-reader-text">Post navigation</h1><div class="nav-links"><div class="nav-previous has-post-thumbnail"><a href="http://themedemos.webmandesign.eu/modern/portfolio/cold-wild-stunning/" rel="prev"><span class="meta-nav">Previous</span><span class="post-title">Cold, wild, stunning</span></a></div></div></nav>-->
 
-{% endfor %}
+<!--{% endfor %}-->
 
 <!--
 {% for tag in page.tags %}
