--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -203,7 +203,7 @@ var zilla_likes = {"ajaxurl":"https:\/\/themedemos.webmandesign.eu\/modern\/wp-a
 				<!--<a href="{{ page.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ page.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ page.image }} 1200w, {{ page.image }} 420w, {{ page.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>-->
 			</figure>
 
-				<a href="{{ site.baseurl }}/{{ page.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ site.baseurl }}/{{ page.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ site.baseurl }}/{{ page.image }} 1200w, {{ site.baseurl }}/{{ page.image }} 420w, {{ site.baseurl }}/{{ page.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>
+				<!--<a href="{{ site.baseurl }}/{{ page.image }}" title="Another Yosemite short movie project"><img width="744" height="497" src="{{ site.baseurl }}/{{ page.image }}" class="attachment-large size-large wp-post-image" alt="PcLGXNjMTdiFVKTrElCl__DSC2245" srcset="{{ site.baseurl }}/{{ page.image }} 1200w, {{ site.baseurl }}/{{ page.image }} 420w, {{ site.baseurl }}/{{ page.image }} 744w" sizes="(max-width: 744px) 100vw, 744px" /></a>-->
 
 		</div>
 
